# simulador-z80

./: .gitignore  Cargo.toml  README.md  index.html
.github/workflows/: coverage.yml  pages.yml  release.yml
src/: cpu.rs  main.rs  traits.rs  ui_traits.rs
src/alu/: arithmetic.rs  mod.rs  types.rs
src/assembler/: keywords.rs  mod.rs  tests.rs  tests_variables.rs
src/assembler/scripts/: mod.rs
src/assembler/tests/: ddcb_fdcb.rs  ds_test.rs  mod.rs  variables.rs
src/assembler/tests/scripts/: mod.rs
src/components/: devices.rs  mod.rs  nmi_trigger.rs
src/components/memories/: mem_64k.rs  mod.rs
src/cpu/: alu.rs  cpu_tests.rs  mod.rs
src/cpu/tests/: alu_tests.rs  block_instructions.rs  ddcb_fdcb.rs  decoding.rs  halt_test.rs  interrupts.rs  io.rs  mod.rs  nmi_tests.rs  registers.rs  stack.rs
src/cpu/tests/instructions/: add_16.rs  alu_table_ops.rs  carry.rs  cpl.rs  decimal.rs  inc_dec.rs  jumps.rs  ld.rs  mod.rs  pop.rs  push_pop.rs  ret.rs  rot.rs  subroutines.rs
src/cpu/tests/instructions/cb/: mod.rs  rot.rs
src/cpu/tests/instructions/ed/: alu.rs  alu16.rs  decimal.rs  mod.rs
src/cpu/tests/instructions/sets/: daa.txt
src/gui/: highlighting.rs  mod.rs
test_files/: daa.txt
utils/: decode.html
z80 files/: examples.json  fib.asm  im0.asm  im1.asm  im2.asm  lcd_test.asm  nmi.asm
