[package]
name = "simulador-z80"
version = "0.1.3"
edition = "2024"

[dependencies]
eframe = "0.33.3"

[dev-dependencies]
rstest = "0.26.1"
egui_kittest = "0.33.3"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = "symbols"
panic = "abort"
