[package]
name = "simulador-z80"
version = "0.1.8"
edition = "2024"

[dependencies]
eframe = { version = "0.33.3", features = ["persistence", "default_fonts"] }
rfd = "0.17.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[dev-dependencies]
rstest = "0.26.1"
egui_kittest = "0.33.3"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }
non_snake_case = "allow"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = "symbols"
panic = "abort"
